005: Various Fixes, Windows Curses October 24th, 2006
Version 005 sees the mac-curses build not be distributed. Instead, you'll have to content yourself by compiling it by hand out of the macport directory.

The good news is that there is now a windows curses build.

_Note: I have no idea why there is no 004._

--- a/macport/Makefile
+++ b/macport/Makefile
@@ -1,9 +1,8 @@
 TARGET = liveonce
 
-OFILES = linuxport.o \
+OFILES = macport.o \
 	 ../gfxengine.o \
 	 ../gfx_curses.o \
-	 ../gfx_sdl.o \
 	 ../grammar.o \
 	 ../item.o \
 	 ../map.o \
@@ -17,12 +16,12 @@ OFILES = linuxport.o \
 	 ../glbdef.o
 
 .cpp.o:
-	g++ -O3 `sdl-config --cflags` -c $< -o $@
+	g++ -O3 -DUSE_CURSES -c $< -o $@
 
 all: $(TARGET)
 
 $(TARGET): $(OFILES)
-	g++ -O3 -o $(TARGET) $(OFILES) `sdl-config --libs` -lcurses
+	g++ -O3 -o $(TARGET) $(OFILES) -lcurses
 
 clean:
 	rm -f *.o
